--- a/website/frontend/index.html
+++ b/website/frontend/index.html
@@ -34,12 +34,11 @@
                 <li draggable="true" ondragstart="drag(event)" id="total-debts">Total Debts (%)</li>
             </ul>
 
-            <button class="import-export">Import-Export</button>
+            <button class="import-export" id="importExportButton">Import-Export</button>
         </div>
 
         <!-- Main Content -->
         <div class="main-content">
-
             <header>
                 <div class="title">Macroeconomic Researcher Food Security Time Series and Large Language Chat GPT Dashboard</div>
                 <select id="country-selector" onchange="updateCountry()">
@@ -51,13 +50,18 @@
                 <img id="country-flag" src="" alt="Country Flag" style="width: 40px; height: 25px; display: none;">
             </header>
            
+            <div id="time-series-graph-container">
+                <!-- Time Slider and Play Button -->
+                <div class="time-slider-container">
+                    <label for="time-slider">Years</label>
+                    <input type="range" id="time-slider" min="1990" max="2024" step="1" value="1990">
+                    <button class="play-button" onclick="togglePlay()">▶️</button>
+                </div>
 
-            <!-- Time Slider and Play Button -->
-            <div class="time-slider-container">
-                <label for="time-slider">Years</label>
-                <input type="range" id="time-slider" min="1990" max="2024" step="1" value="1990">
-                <button class="play-button" onclick="togglePlay()">▶️</button>
-            </div>
+                <!-- Chart Drop Area -->
+                <div class="charts" id="chart-drop-area" ondrop="drop(event)" ondragover="allowDrop(event)">
+                    Time Series Chart
+                </div>
 
             <!-- Chart Drop Area -->
             <div class="charts" id="chart-drop-area" ondrop="drop(event)" ondragover="allowDrop(event)">
@@ -81,6 +85,7 @@
                 </div>
             </div>
            
+                <!-- Annotation Dropdown -->
                 <div class="annotation-dropdown">
                     <!-- Annotation Button -->
                     <button class="annotation-button" onclick="toggleDropdown()">Annotation</button>
