Fixed image path

--- a/website/frontend/index.html
+++ b/website/frontend/index.html
@@ -65,7 +65,7 @@
 
                <!-- Insert Chat Interface here -->
             <div class="chat-icon" onclick="toggleChat()">
-                <img src="Images/gpt.png" width="30" height="30" alt="GPT Icon">
+                <img src="./Images/gpt.png" width="30" height="30" alt="GPT Icon">
             </div>
 
             <div class="chat-modal" id="chatModal">
